--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,6 +19,17 @@
   <strong>Youtube:</strong>
   <%= @post.youtube %>
 </p>
-
+<p>
+リンク
+<% if @post.amazon %>
+<%= link_to("amazon", 'https://www.amazon.co.jp/s?k='+@post.post+'&i=instant-video') %>
+<% end %>
+<% if @post.hulu %>
+<%= link_to("Hulu", 'https://www.hulu.jp/search?q='+@post.post) %>
+<% end %>
+<% if @post.youtube %>
+<%= link_to("youtube", 'https://www.youtube.com/results?search_query='+@post.post) %>
+<% end %>
+</p>
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
