--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,7 +20,7 @@
   <%= @post.youtube %>
 </p>
 <p>
-リンク
+検索結果
 <% if @post.amazon %>
 <%= link_to("amazon", 'https://www.amazon.co.jp/s?k='+@post.post+'&i=instant-video') %>
 <% end %>
