--- a/app/views/posts/_logged_in.html.erb
+++ b/app/views/posts/_logged_in.html.erb
@@ -1,7 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Posts</h1>
-
+<% @post = Post.find_by(id: params[:id])
+@user = User.find_by(id: 1) %>
+<p><%= link_to(@user.name,"users/#{@user.id}") %></p>
 <table>
   <thead>
     <tr>
@@ -9,6 +11,7 @@
       <th>Amazon</th>
       <th>Hulu</th>
       <th>Youtube</th>
+      <th>User_id</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +23,7 @@
         <td><%= post.amazon %></td>
         <td><%= post.hulu %></td>
         <td><%= post.youtube %></td>
+        <td><%= post.user_id %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -29,6 +33,6 @@
 </table>
 
 <br>
-
 <%= link_to 'New Post', new_post_path %>
+
 <%= link_to "ログアウト", logout_path, method: :delete %>
