--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,16 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to(@user.name,"users/#{@user.id}") %>
+<% if Like.find_by(user_id: current_user.id, post_id: @post.id) %>
+        <%= link_to("/likes/#{@post.id}/destroy", {method: "post"}) do %>
+          <span class="fa fa-heart like-btn-unlike"></span>
+        <% end %>
+<% else %>
+        <%= link_to("/likes/#{@post.id}/create", {method: "post"}) do %>
+          <span class="fa fa-heart like-btn"></span>
+        <% end %>
+ <% end %>
+ <%= @likes_count = Like.where(post_id: @post.id).count%>
 <p>
   <strong>Post:</strong>
   <%= @post.post %>
