--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,27 +11,27 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :post %>
-    <%= form.text_field :post %>
+  <div class="form-group">
+    <%= form.label :post ,for:"formGroupExampleInput"%>
+    <%= form.text_field :post, postclass:"form-control" ,id:"formGroupExampleInput" ,placeholder:"タイトルを入力してください"%>
   </div>
 
-  <div class="field">
-    <%= form.label :amazon %>
-    <%= form.check_box :amazon %>
+  <div class="form-check form-check-inline">
+    <%= form.label :amazon ,class:"form-check-label" , for:"inlineCheckbox1"%>
+    <%= form.check_box :amazon, class:"form-check-input" ,type:"checkbox", id:"inlineCheckbox1"%>
   </div>
 
-  <div class="field">
-    <%= form.label :hulu %>
-    <%= form.check_box :hulu %>
+<div class="form-check form-check-inline">
+    <%= form.label :hulu ,class:"form-check-label" , for:"inlineCheckbox2"%>
+    <%= form.check_box :hulu , class:"form-check-input" ,type:"checkbox", id:"inlineCheckbox2"%>
   </div>
 
-  <div class="field">
-    <%= form.label :youtube %>
-    <%= form.check_box :youtube %>
+  <div class="form-check form-check-inline">
+    <%= form.label :youtube ,class:"form-check-label" , for:"inlineCheckbox3"%>
+    <%= form.check_box :youtube , class:"form-check-input" ,type:"checkbox", id:"inlineCheckbox3"%>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class:"btn btn-primary"%>
   </div>
 <% end %>
